--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "apollo-link-rest": "^0.8.0-beta.0",
+    "bootstrap": "^4.5.3",
     "graphql": "^15.4.0",
     "graphql-anywhere": "^4.2.7",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1",
     "qs": "^6.9.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -40,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^7.13.0"
   }
 }
